--- a/src/components/components.css
+++ b/src/components/components.css
@@ -100,10 +100,12 @@ body, html {
 
 .hamburger.active .bar:nth-child(1) {
   transform: translateY(7px) rotate(45deg);
+  right: 30px;
 }
 
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-7px) rotate(-45deg);
+  right: 30px;
 }
 
 /* --- Mobile View Styles (768px and below) --- */
